--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "main": "main.js",
   "devDependencies": {
     "nodeunit": "^0.11.3"
+  },
+  "dependencies": {
+    "memory-cache": "^0.2.0"
   }
 }
