--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "nodeunit": "^0.11.3"
   },
   "dependencies": {
-    "memory-cache": "^0.2.0"
+    "memory-cache": "^0.2.0",
+    "tree-kill": "^1.2.1"
   }
 }
