--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "nodejs-proxy-tcp-tunnel",
   "version": "0.0.2",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "docker:build": "docker build -t vitche/shell-ssh-proxy .",
+    "docker:run": "docker run -dit -p 7443:22 --name shell-ssh-proxy vitche/shell-ssh-proxy"
+  },
   "main": "main.js",
   "bin": {
     "proxy-tcp-tunnel": "./cli.js"
