--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
+    "run": "node cli.js",
     "docker:build": "docker build -t vitche/shell-ssh-proxy .",
     "docker:run": "docker run -dit -p 7022:22 --name shell-ssh-proxy vitche/shell-ssh-proxy",
     "docker:push": "docker push vitche/shell-ssh-proxy"
@@ -13,6 +14,7 @@
   },
   "dependencies": {
     "@jest/globals": "^26.6.2",
+    "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "memory-cache": "^0.2.0",
     "ps-tree": "^1.2.0"
