1. Increased tunnel stability.

--- a/replicator/Dockerfile
+++ b/replicator/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 RUN apt-get -y update
 RUN apt-get -y upgrade
 
-RUN DEBIAN_FRONTEND="noninteractive" apt-get -y install ssh nodejs npm
+RUN DEBIAN_FRONTEND="noninteractive" apt-get -y install ssh nodejs npm sshpass
 
 WORKDIR /applications/shell-ssh-replicator
 
