--- a/tunnel/Dockerfile
+++ b/tunnel/Dockerfile
@@ -6,7 +6,7 @@ RUN apt -y upgrade
 RUN mkdir /run/sshd
 
 RUN apt -y install openssh-server
-RUN echo "\nPort 22\nGatewayPorts yes\nAllowTcpForwarding yes\n" >> /etc/ssh/sshd_config
+RUN echo "\nPort 22\nGatewayPorts yes\nAllowTcpForwarding yes\nClientAliveInterval 30\n" >> /etc/ssh/sshd_config
 RUN ssh-keygen -A
 
 EXPOSE 22
